ingress-nginx/authelia.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authelia
  namespace: ingress-nginx
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/enable-global-auth: "false"
    external-dns.alpha.kubernetes.io/target: "lga1.desertbluffs.com"
spec:
  tls:
    - hosts:
        - login2.desertbluffs.com
  rules:
    - host: login2.desertbluffs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: authelia
                port:
                  number: 9091
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: authelia
  namespace: ingress-nginx
spec:
  podSelector:
    matchLabels:
      app: authelia
  ingress:
  - ports:
    - port: 9091
    from:
    - namespaceSelector:
        matchLabels:
          name: ingress-nginx
---
apiVersion: v1
kind: Service
metadata:
  name: authelia
  namespace: ingress-nginx
spec:
  selector:
    app: authelia
  ports:
  - name: authelia
    port: 9091
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authelia
  namespace: ingress-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authelia
  template:
    metadata:
      labels:
        app: authelia
    spec:
      volumes:
        - name: authelia-config
          projected:
            sources:
              - secret:
                  name: authelia-users
                  items:
                    - key: users.yaml
                      path: users.yaml
              - configMap:
                  name: authelia-custom
                  items:
                    - key: custom.yaml
                      path: custom.yaml
        - name: authelia-secrets
          secret:
            secretName: authelia-secrets
      containers:
        - name: authelia
          image: ghcr.io/authelia/authelia:4
          # image: alpine
          ports:
            - name: authelia
              containerPort: 9091
          volumeMounts:
            - name: authelia-config
              mountPath: /config
              readOnly: true
            - name: authelia-secrets
              mountPath: /secrets
              readOnly: true
          # command: ["sleep"]
          # args: ["10000000"]
          command: ["authelia"]
          args: ["--config", "/config/custom.yaml"]

          livenessProbe:
            httpGet:
              path: /
              port: 9091
            periodSeconds: 15
            initialDelaySeconds: 15
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 6

          readinessProbe:
            httpGet:
              path: /
              port: 9091
            periodSeconds: 15
            initialDelaySeconds: 15
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 6
